Fix scss warning

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -349,6 +349,7 @@
     padding: 10px 10px 10px 35px;
     color: $text-base-color;
     -webkit-appearance: none;
+    appearance: none;
     font-size: $base-font-size;
     background-color: rgba(128, 128, 128, 0.1);
     border: 1px solid rgba(128, 128, 128, 0.1);
